--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,13 @@
     <title>To Do List</title>
   </head>
   <body>
+      <div class="github">
+          <p>See Code Here: </p>
+          <p><a href="https://github.com/shivam-giri/ToDo-List">Github</a></p>
+        </div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+   
 
   </body>
 </html>
